--- a/flask_image_viewer/static/style.css
+++ b/flask_image_viewer/static/style.css
@@ -5,12 +5,12 @@
 }
 
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f4f4f9;
-  color: #333;
-  padding-bottom: 80px;
+  background-color: #ffffff; /* fundo branco */
+  margin: 0;
+  padding: 0;
 }
 
+/* Header */
 .header {
   text-align: center;
   background-color: #2c3e50;
@@ -27,6 +27,7 @@ body {
   font-size: 1.2rem;
 }
 
+/* Container do gráfico */
 .graph-container {
   text-align: center;
   margin: 30px 0;
@@ -39,52 +40,45 @@ body {
   border: 2px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  display: block;
+  margin: 0 auto;
+  z-index: 10;
+  position: relative;
 }
 
-button {
-  margin: 15px 5px;
-  padding: 10px 20px;
-  font-size: 1rem;
-  cursor: pointer;
-  border: none;
-  background-color: #2c3e50;
-  color: white;
-  border-radius: 5px;
-}
-
+/* Footer */
 .footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 80px;
   background-color: #34495e;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-  padding: 0 20px;
-  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-}
-
-.footer-text {
   text-align: center;
-  flex-grow: 1;
-  max-width: 60%;
+  padding: 15px;
+  font-size: 1rem;
+  width: 100%;
+  margin-top: 30px;
 }
 
-.footer-logo-left,
-.footer-logo-right {
-  position: absolute;
-  bottom: 10px;
-  width: 50px;
+.footer .logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.logo {
+  max-width: 50px;
   height: auto;
 }
 
-.footer-logo-left {
-  left: 10px;
+/* .image-container {
+  position: relative;
+  z-index: 1;
 }
-
-.footer-logo-right {
-  right: 10px;
-}
+.image-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+  z-index: 2;
+  position: relative;
+} */
