--- a/projeto/static/css/styles.css
+++ b/projeto/static/css/styles.css
@@ -5,12 +5,14 @@
 }
 
 body {
-  background-color: #ffffff; /* fundo branco */
-  margin: 0;
-  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f9;
+  color: #333;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 60px;
 }
 
-/* Header */
 .header {
   text-align: center;
   background-color: #2c3e50;
@@ -27,8 +29,8 @@ body {
   font-size: 1.2rem;
 }
 
-/* Container do gráfico */
 .graph-container {
+  position: relative;
   text-align: center;
   margin: 30px 0;
   padding-bottom: 25px;
@@ -40,45 +42,56 @@ body {
   border: 2px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  display: block;
-  margin: 0 auto;
-  z-index: 10;
-  position: relative;
 }
 
-/* Footer */
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  border: none;
+  padding: 12px;
+  cursor: pointer;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  z-index: 1;
+  transition: background-color 0.3s;
+}
+
+.carousel-button:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.carousel-button.left {
+  left: 10px;
+}
+
+.carousel-button.right {
+  right: 10px;
+}
+
 .footer {
   background-color: #34495e;
   color: white;
   text-align: center;
   padding: 15px;
   font-size: 1rem;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  margin-top: 30px;
 }
 
-.footer .logo-container {
+.logo-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .logo {
   max-width: 50px;
   height: auto;
 }
-
-/* .image-container {
-  position: relative;
-  z-index: 1;
-}
-.image-container img {
-  display: block;
-  width: 100%;
-  height: auto;
-  z-index: 2;
-  position: relative;
-} */
