--- a/projeto/static/css/styles.css
+++ b/projeto/static/css/styles.css
@@ -12,7 +12,7 @@ body {
   color: #333;
   min-height: 100vh;
   position: relative;
-  padding-bottom: 60px; /* espaço pro footer */
+  /*padding-bottom: 60px;*/ /* espaço pro footer */
 }
 
 /* Cabeçalho */
@@ -31,10 +31,10 @@ body {
   background-color: #2c3e50;
   color: white;
   border: none;
-  padding: 10px 14px;
+  padding: 8px 12px;
   cursor: pointer;
   border-radius: 50%;
-  font-size: 2rem;
+  font-size: 1.5rem;
   z-index: 2;
   transition: all 0.3s ease;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
@@ -48,11 +48,11 @@ body {
 }
 
 .carousel-button.left {
-  left: 20px;
+  left: -30px;
 }
 
 .carousel-button.right {
-  right: 20px;
+  right: -30px;
 }
 
 /* Imagem central */
